fixed image on mobile devices? #5

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ h2 {
 
 #photo {
 	width: 75% !important;
-	text-align: center;
+	text-align: center !important;
 	margin: 16px !important;
 }
 
